--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ejercicio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -13,9 +14,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build docs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docs": "rm -rf docs && react-scripts build && mv build docs",
+    "push-docs": "rm -rf docs && react-scripts build && mv build docs && git add docs/* && git commit -m \"Update docs\" && git push"
   },
   "eslintConfig": {
     "extends": "react-app"
